style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


body {
  font-family: Arial, sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: white;
}


.container {
  display: flex;
  width: 80%;
  max-width: 1000px;
  background-color: white;
  border-radius: 8px;
  overflow: hidden;
}


.image-section {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 90vh; 
  margin-top: 20px;
  border-radius: 8px;
  overflow: hidden; 
}


.slider {
  position: relative;
  width: 100%;
  height: 100%; 
}

.slider img {
  width: 100%;
  height: 100%; 
  position: absolute;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
  object-fit: cover; 
  border-radius: 8px; 
}

.slider img.active {
  opacity: 1; 
}

/* Navigation Arrows */
.arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  font-size: 24px;
  padding: 10px;
  cursor: pointer;
  z-index: 2;
  border-radius: 50%;
}

.arrow.left {
  left: 10px;
}

.arrow.right {
  right: 10px;
}


.form-section {
  flex: 1;
  padding: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.form-section h1 {
  font-size: 2rem;
  margin-bottom: 10px;
  color: #333;
  text-align: center;
}

.form-section h2 {
  font-size: 1.2rem;
  margin-bottom: 30px;
  color: #777;
  text-align: center;
}


form {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 350px;
}

form input {
  margin-bottom: 20px;
  padding: 12px;
  font-size: 1rem;
  border: 2px solid #968e8e;
  border-radius: 4px;
  background-color: rgb(241, 237, 237);
}

form input:focus {
  outline: none;
  border-color: #007bff;
}

form button {
  padding: 12px;
  background-color: #007bff;
  color: white;
  font-size: 1rem;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin-bottom: 20px;
}

form button:hover {
  background-color: #0056b3;
}

.form-section .extra {
  text-align: center;
  font-size: 0.9rem;
}

.form-section .extra p {
  margin: 10px 0;
}

.form-section .extra a {
  color: #007bff;
  text-decoration: none;
}

.form-section .extra a:hover {
  text-decoration: underline;
}

